# NinjaOne_Ticketing_Slack_Connector

./: .env-template  CLAUDE.md  Dockerfile  README.md  bot.py  db.py  docker-compose.yml  eng-bot.service  ninja_auth.py  poller.py  pyproject.toml  registry.py  schema_mapper.py  signals.py  tenant.py  web.py
templates/: base.html  command_form.html  index.html  login.html  setup.html  slack.html
