[project]
name = "form-bot"
version = "2.0.0"
description = "Dynamic Slack Form Bot — maps slash commands to NinjaOne ticket forms"
requires-python = ">=3.12"
dependencies = [
    "slack-bolt[async]>=1.18.0",
    "slack-sdk>=3.27.0",
    "aiohttp>=3.9.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.0,!=3.1.4",
    "python-multipart>=0.0.9",
    "cryptography>=42.0.0",
    "passlib[bcrypt]>=1.7.4",
]
